skeplib/tests/fixtures/sema_project/invalid/imported_call_type_mismatch/main.sk
from lib import add;
fn main() -> Int { return add("x", 1); }
